--- a/ApolloArchery/app/src/main/AndroidManifest.xml
+++ b/ApolloArchery/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ApolloArchery"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".ScoreCardActivity"
             android:exported="false" />
         <activity
