--- a/ApolloArchery/app/build.gradle
+++ b/ApolloArchery/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-auth:21.3.0'
     implementation 'androidx.test:runner:1.5.2'
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "com.google.code.gson:gson:2.9.0"
+    annotationProcessor "androidx.room:room-compiler:2.5.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
