--- a/ApolloArchery/app/src/main/AndroidManifest.xml
+++ b/ApolloArchery/app/src/main/AndroidManifest.xml
@@ -7,12 +7,18 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:logo="@drawable/apollo_archery_logoxxxhdpi"
         android:label="@string/app_name"
+        android:logo="@drawable/apollo_archery_logoxxxhdpi"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ApolloArchery"
         tools:targetApi="31">
+        <activity
+            android:name=".SightMarksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ArrowCounterActivity"
+            android:exported="false" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
