--- a/ApolloArchery/app/build.gradle
+++ b/ApolloArchery/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-analytics:21.3.0'
     implementation 'com.google.firebase:firebase-firestore:24.6.1'
+    implementation 'com.google.firebase:firebase-storage:20.2.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -43,6 +44,7 @@ dependencies {
     implementation 'androidx.test:runner:1.5.2'
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "com.google.code.gson:gson:2.9.0"
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
     annotationProcessor "androidx.room:room-compiler:2.5.1"
 
     testImplementation 'junit:junit:4.13.2'
