--- a/ApolloArchery/app/src/main/AndroidManifest.xml
+++ b/ApolloArchery/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ScoreCardActivity"
+            android:name=".ScoreCardsActivity"
             android:exported="false" />
         <activity
             android:name=".ShootingActivity"
