--- a/ApolloArchery/app/build.gradle
+++ b/ApolloArchery/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.fullsail.apolloarchery'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.fullsail.apolloarchery"
@@ -31,21 +31,23 @@ android {
 
 dependencies {
 
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
-    implementation 'com.google.firebase:firebase-analytics:21.3.0'
-    implementation 'com.google.firebase:firebase-firestore:24.6.1'
-    implementation 'com.google.firebase:firebase-storage:20.2.0'
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
+    implementation 'com.google.firebase:firebase-analytics:21.6.2'
+    implementation 'com.google.firebase:firebase-firestore:24.11.1'
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
     implementation 'androidx.test:runner:1.5.2'
-    implementation "androidx.room:room-runtime:2.5.1"
-    implementation "com.google.code.gson:gson:2.9.0"
-    implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
-    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation "com.google.code.gson:gson:2.10.1"
+    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
+    implementation 'androidx.activity:activity:1.8.2'
+    implementation project(':app')
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
