--- a/ApolloArchery/app/src/main/AndroidManifest.xml
+++ b/ApolloArchery/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.ApolloArchery"
         tools:targetApi="31">
         <activity
+            android:name=".LauncherActivity"
+            android:exported="false" />
+        <activity
             android:name=".SightMarksActivity"
             android:exported="false" />
         <activity
@@ -52,11 +55,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <provider android:name="androidx.core.content.FileProvider"
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.fullsail.apolloarchery"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
     </application>
